--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/red</item>
     </style>
 
@@ -15,17 +15,36 @@
         <item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
     </style>
 
+    <style name="CurScoreHeader" parent="android:TextAppearance.Widget.TextView">
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="HighScoreHeader" parent="android:TextAppearance.Widget.TextView">
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="CurScore" parent="android:TextAppearance.Widget.TextView">
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:textSize">70sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <style name="HighScore" parent="android:TextAppearance.Widget.TextView">
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
     <!-- The theme of the start button on the user frame -->
     <style name="StartButton" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:colorButtonNormal">@color/red</item>
         <item name="android:colorControlHighlight">@color/red</item>
         <item name="android:textColor">@color/almond</item>
-        <item name="android:radius">0dp</item>
-        <item name="android:padding">0dp</item>
-        <item name="android:clipChildren">false</item>
-        <item name="android:clipToPadding">false</item>
-        <item name="android:fontFamily">casual</item>
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:textSize">50sp</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
     </style>
 
 </resources>
