--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,45 +6,60 @@
     android:background="@color/colorPrimary"
     tools:context="org.pseudonymous.tapit.MainActivity">
 
-    <TextView
-        android:id="@+id/CurScoreHeader"
-        android:text="SCORE"
-        app:layout_widthPercent="60%"
-        app:layout_heightPercent="7%"
-        android:paddingLeft="10dp"
-        android:theme="@style/CurScoreHeader"
-        />
-    <TextView
-        android:id="@+id/HighScoreHeader"
-        android:text="HIGH SCORE"
-        android:gravity="right"
-        app:layout_widthPercent="40%"
-        app:layout_heightPercent="5%"
-        android:paddingRight="10dp"
-        android:theme="@style/HighScoreHeader"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
-    <TextView
-        android:id="@+id/CurScore"
-        android:layout_below="@id/CurScoreHeader"
-        app:layout_widthPercent="60%"
-        app:layout_heightPercent="17%"
-        android:paddingTop="15dp"
-        android:paddingLeft="5dp"
-        android:theme="@style/CurScore"
-        android:text="000"
-        />
-    <TextView
-        android:id="@+id/HighScore"
-        android:layout_toRightOf="@id/CurScore"
-        android:layout_below="@id/HighScoreHeader"
-        android:gravity="right"
-        android:paddingTop="10dp"
-        app:layout_widthPercent="40%"
-        app:layout_heightPercent="10%"
-        android:theme="@style/HighScore"
-        android:text="000"
-        />
+    <android.support.percent.PercentRelativeLayout
+        android:id="@+id/GameHeader"
+        android:layout_width="match_parent"
+        app:layout_heightPercent="20%"
+        >
+        <TextView
+            android:id="@+id/CurScoreHeader"
+            android:text="SCORE"
+            app:layout_widthPercent="60%"
+            app:layout_heightPercent="35%"
+            android:paddingLeft="10dp"
+            android:theme="@style/CurScoreHeader"
+            />
+        <TextView
+            android:id="@+id/HighScoreHeader"
+            android:text="HIGH SCORE"
+            android:gravity="right"
+            app:layout_widthPercent="40%"
+            app:layout_heightPercent="20%"
+            android:paddingRight="10dp"
+            android:theme="@style/HighScoreHeader"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+        <TextView
+            android:id="@+id/CurScore"
+            android:layout_below="@id/CurScoreHeader"
+            app:layout_widthPercent="60%"
+            app:layout_heightPercent="65%"
+            android:includeFontPadding="false"
+            android:paddingLeft="5dp"
+            android:theme="@style/CurScore"
+            android:text="000"
+            />
+        <TextView
+            android:id="@+id/HighScore"
+            android:layout_toRightOf="@id/CurScore"
+            android:layout_below="@id/HighScoreHeader"
+            android:gravity="right"
+            app:layout_widthPercent="40%"
+            app:layout_heightPercent="30%"
+            android:includeFontPadding="false"
+            android:theme="@style/HighScore"
+            android:text="000"
+            />
+    </android.support.percent.PercentRelativeLayout>
+
+    <View
+        android:id="@+id/GameZone"
+        android:layout_below="@id/GameHeader"
+        app:layout_heightPercent="100%"
+        android:layout_width="match_parent"
+        >
+
+    </View>
 
     <!-- This is the game layout containing the following
             * The current score
