--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#455a64</color>
     <color name="colorPrimaryDark">#455a64</color>
 
-    <color name="red">#e53935</color>
+    <color name="red">#d84315</color>
     <color name="tan">#D7CCC8</color>
     <color name="grey">#66000000</color>
     <color name="light_blue">#81D4FA</color>
