--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
     android:id="@+id/fullscreen_content"
-    tools:context="org.pseudonymous.tapit.MainActivity">
+    tools:context="org.pseudonymous.tapit.MainActivity"
+    android:screenOrientation="portrait">
     <!--
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/GameHeader"
