--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#455a64</color>
     <color name="colorPrimaryDark">#455a64</color>
-
+    <color name="circleColor">#81D4FA</color>
     <color name="red">#d84315</color>
     <color name="tan">#D7CCC8</color>
     <color name="grey">#66000000</color>
