--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,12 @@
     android:id="@+id/fullscreen_content"
     tools:context="org.pseudonymous.tapit.MainActivity"
     android:screenOrientation="portrait">
-    <!--
+
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/GameHeader"
         android:layout_width="match_parent"
         app:layout_heightPercent="20%"
+        android:background="@color/colorPrimaryDark"
         >
         <TextView
             android:id="@+id/CurScoreHeader"
@@ -36,44 +37,31 @@
             app:layout_widthPercent="60%"
             app:layout_heightPercent="65%"
             android:includeFontPadding="false"
-            android:paddingLeft="5dp"
+            android:paddingStart="5dp"
             android:theme="@style/CurScore"
-            android:text="000"
+            android:text="@string/CurScore"
             />
         <TextView
             android:id="@+id/HighScore"
-            android:layout_toRightOf="@id/CurScore"
+            android:layout_toEndOf="@id/CurScore"
             android:layout_below="@id/HighScoreHeader"
             android:gravity="right"
             app:layout_widthPercent="40%"
             app:layout_heightPercent="30%"
+            android:paddingEnd="10dp"
             android:includeFontPadding="false"
             android:theme="@style/HighScore"
-            android:text="000"
+            android:text="@string/HighScore"
             />
     </android.support.percent.PercentRelativeLayout>
-    -->
 
     <org.pseudonymous.tapit.engine.GameSurfaceView
         android:id="@+id/GameZone"
         app:layout_heightPercent="100%"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        >
+        android:layout_below="@id/GameHeader">
 
     </org.pseudonymous.tapit.engine.GameSurfaceView>
-
-    <!-- This is the game layout containing the following
-            * The current score
-            * The highest score
-            * The actual circles (called <insert name>)
-    -->
-
-    <!-- This is the start screen overlay which disappears when the game starts, and contains the following
-        * The start button
-        * The settings
-        * The current user details
-    -->
     <Button
         android:layout_width="match_parent"
         app:layout_heightPercent="30%"
