--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,33 +13,6 @@
         app:layout_heightPercent="20%"
         android:background="@color/colorPrimaryDark"
         >
-        <!--<ImageButton-->
-            <!--android:id="@+id/SettingsButton"-->
-            <!--app:layout_widthPercent="20%"-->
-            <!--app:layout_heightPercent="50%"-->
-            <!--android:layout_toRightOf="@+id/CurScoreHeader"-->
-            <!--android:theme="@style/SettingsCog"-->
-            <!--android:src="@drawable/cog"-->
-            <!--/>-->
-        <!--<TextView-->
-            <!--android:id="@+id/CurScoreHeader"-->
-            <!--android:text="SCORE"-->
-            <!--app:layout_widthPercent="40%"-->
-            <!--app:layout_heightPercent="35%"-->
-            <!--android:paddingLeft="20dp"-->
-            <!--android:theme="@style/CurScoreHeader"-->
-            <!--/>-->
-        <!--<TextView-->
-            <!--android:id="@+id/HighScoreHeader"-->
-            <!--android:text="HIGH SCORE"-->
-            <!--android:gravity="right"-->
-            <!--app:layout_widthPercent="40%"-->
-            <!--app:layout_heightPercent="20%"-->
-            <!--android:paddingRight="10dp"-->
-            <!--android:theme="@style/HighScoreHeader"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:layout_alignParentEnd="true" />-->
-
         <org.pseudonymous.tapit.components.ScoreText
             android:id="@+id/cur_score"
             android:layout_alignParentTop="true"
@@ -61,6 +34,13 @@
             android:theme="@style/HighScore"
             app:layout_heightPercent="30%"
             app:layout_widthPercent="100%" />
+        <ImageButton
+            app:layout_widthPercent="20%"
+            app:layout_heightPercent="40%"
+            android:id="@+id/settingsButton"
+            android:src="@drawable/more"
+            android:tint="@color/green"
+            android:background="@android:color/transparent"/>
     </android.support.percent.PercentRelativeLayout>
 
     <org.pseudonymous.tapit.engine.GameSurfaceView
