--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
-<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentRelativeLayout
+    android:id="@+id/fullscreen_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="org.pseudonymous.tapit.MainActivity"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fullscreen_content"
-    tools:context="org.pseudonymous.tapit.MainActivity"
     android:screenOrientation="portrait">
 
     <android.support.percent.PercentRelativeLayout
@@ -13,6 +14,16 @@
         app:layout_heightPercent="20%"
         android:background="@color/colorPrimaryDark"
         >
+
+        <org.pseudonymous.tapit.components.TimeBar
+            android:id="@+id/time_bar"
+            android:layout_alignParentTop="true"
+            android:layout_height="5dp"
+            app:layout_widthPercent="100%"
+            app:bar_color="@color/green"
+            app:slide_to="right"
+            />
+
         <org.pseudonymous.tapit.components.ScoreText
             android:id="@+id/cur_score"
             android:layout_alignParentTop="true"
@@ -34,13 +45,7 @@
             android:theme="@style/HighScore"
             app:layout_heightPercent="30%"
             app:layout_widthPercent="100%" />
-        <ImageButton
-            app:layout_widthPercent="20%"
-            app:layout_heightPercent="40%"
-            android:id="@+id/settingsButton"
-            android:src="@drawable/more"
-            android:tint="@color/green"
-            android:background="@android:color/transparent"/>
+
     </android.support.percent.PercentRelativeLayout>
 
     <org.pseudonymous.tapit.engine.GameSurfaceView
@@ -59,4 +64,17 @@
         android:theme="@style/StartButton"
         android:id="@+id/start_button"/>
 
+    <include layout="@layout/settings"/>
+
+    <org.pseudonymous.tapit.components.DraggableImageButton
+        android:id="@+id/menu_button"
+        app:layout_widthPercent="20%"
+        app:layout_heightPercent="8%"
+        android:paddingTop="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="0dp"
+        android:src="@drawable/more"
+        android:tint="@color/green"
+        android:background="@android:color/transparent"
+        android:contentDescription="Menu Button" />
 </android.support.percent.PercentRelativeLayout>
