--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/GameHeader"
         android:layout_width="match_parent"
         app:layout_heightPercent="20%"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         >
 
         <org.pseudonymous.tapit.components.TimeBar
@@ -20,7 +20,7 @@
             android:layout_alignParentTop="true"
             android:layout_height="5dp"
             app:layout_widthPercent="100%"
-            app:bar_color="@color/green"
+            app:bar_color="@color/colorSecondary"
             app:slide_to="right"
             />
 
@@ -74,7 +74,7 @@
         android:paddingStart="20dp"
         android:paddingEnd="0dp"
         android:src="@drawable/more"
-        android:tint="@color/green"
+        android:tint="@color/colorSecondary"
         android:background="@android:color/transparent"
         android:contentDescription="Menu Button" />
 </android.support.percent.PercentRelativeLayout>
