--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#222222</color>
-    <color name="colorPrimaryDark">#222222</color>
+    <color name="colorPrimary">#6C7888</color>
+    <color name="colorPrimaryDark">#3B3E47</color>
+    <color name="colorSecondary">#FBB348</color>
+    <color name="colorPrimaryDarkText">#3B3E47</color>
+    <color name="colorTertiary">#5A4A4A</color>
+    <color name="colorCircle">@color/colorSecondary</color>
     <color name="green">#86b817</color>
-    <color name="circleColor">@color/green</color>
+    <color name="circleColor">@color/colorSecondary</color>
     <color name="red">#d84315</color>
     <color name="tan">#D7CCC8</color>
     <color name="grey">#66000000</color>
