--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -9,35 +9,40 @@
     android:visibility="visible">
 
 
-    <View
+    <ImageView
         android:id="@+id/easyButton"
         app:layout_widthPercent="33.33%"
         app:layout_heightPercent="20%"
+        android:src="@drawable/easy"
         android:background="@color/green"/>
-    <View
+    <ImageView
         android:id="@+id/mediumButton"
         app:layout_widthPercent="33.33%"
         app:layout_heightPercent="20%"
         android:layout_toRightOf="@id/easyButton"
+        android:src="@drawable/medium"
         android:background="@color/orange"/>
-    <View
+    <ImageView
         android:id="@+id/hardButton"
         app:layout_widthPercent="33.33%"
         app:layout_heightPercent="20%"
         android:layout_toRightOf="@id/mediumButton"
+        android:src="@drawable/hard"
         android:background="@color/red"/>
-    <View
+    <ImageView
         android:id="@+id/soundButton"
         app:layout_widthPercent="50%"
         app:layout_heightPercent="20%"
         android:layout_below="@id/easyButton"
+        android:src="@drawable/vol_off"
         android:background="@color/blue"/>
-    <View
+    <ImageView
         android:id="@+id/vibrationButton"
         app:layout_widthPercent="50%"
         app:layout_heightPercent="20%"
         android:layout_toRightOf="@id/soundButton"
         android:layout_below="@id/hardButton"
+        android:src="@drawable/vibrate"
         android:background="@color/brown"/>
 
     <!--<view-->
