--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="blue">#29B6F6</color>
     <color name="brown">#8D6E63</color>
     <color name="light_brown">#EFEBE9</color>
+    <color name="white">#FFF</color>
 </resources>
