--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="brown">#8D6E63</color>
     <color name="light_brown">#EFEBE9</color>
     <color name="white">#FFF</color>
+    <color name="light_grey">#9e9e9e</color>
 </resources>
